@@ -1,3 +1,8 @@
+2013-06-07  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
+	* DevNotes: Add entry cgf-000023.
+	* sigproc.cc (exit_thread): Remove now-unneeded sleep code.
+
 2013-06-05  Corinna Vinschen  <corinna@vinschen.de>
 
 	* include/cygwin/version.h (CYGWIN_VERSION_DLL_MINOR): Bump to 21.
